# ABM

./: .dockerignore  .env.example  .gitignore  Dockerfile.cron  KNOWN_ISSUES.md  ONBOARDING.md  README.md  nixpacks.toml  pyproject.toml  railway.cron.json  railway.json  railway.social-cron.json  requirements.txt  scorer.py
.claude/: launch.json
auto_search/: KNOWN_ISSUES.md  README.md  __init__.py  discovery_runner.py  healthcare.py  job_qualifier.py  job_stacking.py  lifecycle.py  llm.py  models.py  normalize.py  pipeline.py  priority.py  qualifier.py  run_control.py  runtime.py
docs/: ABM_Cost_Calculator.xlsx  ABM_MATCHING.md  ABM_PROJECT_ARCHITECTURE.md  CRON_SETUP.md  DB_REVIEW.md  DEDUP.md  DEPLOY_RAILWAY.md  FINAL_ARCHITECTURE.md  QA_CHECKLIST.md  SCORING_PHASE_BRIEF.md  SPEND_GUARDRAILS.md  UI_DESIGN_BRIEF.md  V1_PRODUCTION_VISION.md  V1_VISION.md
prompts/: health_systems.txt  payers.txt  specialties.txt
scripts/: curate_discovery.py  run_daily.py  run_discovery.py  run_social.py  test_layoffs_pipeline.py  test_leadership_changes.py  test_qualifier_one.py  test_warntracker_pipeline.py
tests/: test_abm_annotate.py  test_abm_api.py  test_abm_matcher.py  test_abm_parse.py  test_abm_util.py  test_acquisitions.py  test_api.py  test_discovery_runner.py  test_funding.py  test_intros.py  test_job_postings.py  test_job_qualifier.py  test_job_stacking.py  test_leadership_changes.py  test_lifecycle.py  test_models.py  test_news.py  test_normalize.py  test_pipeline_gate.py  test_postgres_repository.py  test_priority.py  test_qualifier_parsing.py  test_repository.py  (+13 more)
(+74 files in other folders)
