[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abm-scorer"
version = "0.1.0"
description = "Magical ABM — account scoring + auto-search discovery pipeline"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_search*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle errors, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter, not worth failing CI over
]

[tool.ruff.lint.per-file-ignores]
# Test scripts and __main__ blocks favour readability over import rules.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
